Project 2 - Parser/tests/parser/test031.lgf
(* data constructor decl with missing type *)
datatype Pair ['a, 'b] = Pair {'a, }
; 0
